--- a/style.css
+++ b/style.css
@@ -8,13 +8,12 @@ header {
   height: 10vh;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
 }
 
 .maine {
   display: flex;
   flex-wrap: wrap;
-  height: 85vh;
+  height: 85%;
   width: 100%;
 }
 
@@ -28,6 +27,8 @@ main {
   background-color: darkslategrey;
   height: 100%;
   width: 85%;
+  display: flex;
+  flex-direction: column;
 }
 
 footer {
@@ -53,7 +54,8 @@ body {
 
 .ButikBiblotekISP {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  padding-left: 10vh;
 }
 
 .Jerome {
@@ -66,6 +68,44 @@ body {
   border: 0.5pc solid black;
 }
 
-.upper {
+.Upper {
   display: flex;
+  flex-wrap: wrap;
+}
+
+.bild {
+  padding-top: 8%;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-bottom: 10%;
+  width: 40%;
+}
+
+.bildText {
+  padding: 0px;
+  padding-top: 8%;
+  width: 40%;
+}
+
+.pokomon{
+  width: 100%;
+}
+/* 
+.header-links1{
+  padding-left: 10vh;
+  padding-right: 20vh;
+  
+}
+.header-links2{
+  padding-left: 0vh;
+  padding-right: 20vh;  
+}
+.header-links3{
+  padding-left: 0vh;
+  padding-right: 20vh;
+  
+}
+*/
+.AccountLogin {
+  padding-left: 70vh;
 }
